# split-histogram

./: Cargo.toml  README.md
.github/workflows/: ci.yml
asm/: observe_f64  observe_f64_naive  observe_f64_unsafe  observe_u64  observe_u64_naive  observe_u64_unsafe
benches/: BENCHMARK.md  README.md  comparison.rs
src/: impls.rs  lib.rs  tests.rs
